Working on mobile bug.

--- a/src/components/home/home.scss
+++ b/src/components/home/home.scss
@@ -39,6 +39,7 @@
     justify-content: center;
     align-items: center;
     position: relative;
+    z-index: 998;
 }
 
 .slide-center-wrapper {
